Prevent long hyphenated words wrapping
e.g. step-grandmother
https://twitter.com/getwhatdone/status/1219304182525677574

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ p {
 	font-family: bebas-neue, sans-serif;
 	font-size: 14.5em;
 	text-transform: uppercase;
+	white-space: nowrap;
 	overflow: hidden;
 }
 
